# social_data_analytics_task1

./: .gitignore  README.md  cleaning.py  pyproject.toml  requirements.txt  task.ipynb  task1.ipynb
Documentation/: TASK3_LEXICAL_MODELLING.md  TASK_CLEANING.md
data/: products.csv
data/cleaned_data/: cleaned_reviews_all_flags.csv  cleaned_reviews_no_lemma_no_stopwords.csv  cleaned_reviews_no_speical_no_lowercase.csv
data/reviews/: ARTSEA Projector 4K 1080P Support, Mini Projector Smart for Movie Projection Compatible with Phone- White.csv  Great Value Vegetable Oil, Heart Healthy and Versatile, 48 fl oz Bottle.csv  Zinus 6" Basic Tight Top Bonnell Innerspring Mattress, Twin.csv
data/scored_data/: cleaned_reviews_all_flags_scored.csv  cleaned_reviews_no_lemma_no_stopwords_scored.csv  cleaned_reviews_no_speical_no_lowercase_scored.csv
scraped_data/: products.csv
scraped_data/Zinus_6_Basic_Tight_Top_Bonnell_Innerspring_Mattress_Twin/: reviews1.csv
scraped_data/reviews/: ARTSEA Projector 4K 1080P Support, Mini Projector Smart for Movie Projection Compatible with Phone- White.csv  Great Value Vegetable Oil, Heart Healthy and Versatile, 48 fl oz Bottle.csv  Zinus 6" Basic Tight Top Bonnell Innerspring Mattress, Twin.csv
task1/: scraping.ipynb
task2/: cleaning.py
task3/: .env.example  ai_gen.ipynb
task3/lexicalStep/: change.py  cleaned_data_numeric.csv  lexicalModelling.py  negative.txt  output.csv  positive.txt  sentiwordnet.txt
task3/lexicalStep/models/: bing_model.py  sentiwordnet_model.py
task3/lexicalStep/utils/: preprocessing.py
