[project]
name = "task1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.71.0",
    "groq>=1.1.2",
    "ipykernel>=7.2.0",
    "openrouter>=0.8.1",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "pytest-playwright>=0.7.2",
    "statsmodels>=0.14.6",
    "textblob>=0.19.0",
    "tqdm>=4.67.3",
    "undetected-chromedriver>=3.5.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
